[package]
name = "token-trackoooooooor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Interact w/ EVM blockchains.
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["ws", "rustls", "abigen"] }

# Loading .env variables.
dotenv = "0.15.0"

# Running async threads.
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }

# For quick and easy discord alerts.
reqwest = "0.11.10"
webhook = "2.1.2"

# For the timestamp_print macro
colored = "2.0.0"
chrono = "0.4.23"

# For the CLI
eyre = "0.6.8"

# For the CLI args
clap = { version = "4.1.8", features = ["derive"] }

# For the json parsing
serde = "1.0.155"
serde_json = "1.0.94"


